# talk_to_dataset

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
src/: agent.py  cli.py  db.py  mcp_server.py  prompts.py  sql_tools.py
supabase/: setup_readonly_role.sql
tests/: conftest.py  test_agent_evals.py  test_db.py  test_db_integration.py  test_sql_tools.py
