[project]
name = "text-to-sql"
version = "0.1.0"
description = "Natural-language data Q&A agent (OpenAI Agents SDK + Supabase via custom function tools)."
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30",
    "mcp[cli]>=1.12",
    "openai-agents>=0.14.6",
    "python-dotenv>=1.2.2",
    "streamlit>=1.56.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
markers = [
    "llm: hits the OpenAI API (slow, costs money, requires OPENAI_API_KEY)",
    "live_db: connects to a real Supabase / Postgres (requires SUPABASE_DB_URL)",
]
addopts = "-m 'not llm and not live_db'"
asyncio_mode = "auto"
